//   Copyright 2020 Google LLC
//
//   Licensed under the Apache License, Version 2.0 (the "License");
//   you may not use this file except in compliance with the License.
//   You may obtain a copy of the License at
//
//   https://www.apache.org/licenses/LICENSE-2.0
//
//   Unless required by applicable law or agreed to in writing, software
//   distributed under the License is distributed on an "AS IS" BASIS,
//   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
//   See the License for the specific language governing permissions and
//   limitations under the License.

syntax = "proto3";

package googleidentity.oauth2.util;

option java_package = "com.google.googleidentity.oauth2.util";
option java_multiple_files = true;

// Store oauth2 related enums
message OAuth2Enums {
  enum GrantType {
    NONE = 0;
    AUTHORIZATION_CODE = 1;
    IMPLICIT = 2;
    REFRESH_TOKEN = 3;
    JWT_ASSERTION = 4;
  }

  enum ResponseType {
    EMPTY = 0;
    CODE = 1;
    TOKEN = 2;
  }

  enum TokenType {
    ACCESS = 0;
    REFRESH = 1;
  }
}
